# my-python-project

./: MANIFEST.in  README.md  pyproject.toml
pyls/: main.py
pyls.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
